# WikiWatch

./: .env.template  .gitignore  README.md  app.py  docker-compose-database.yml  pyproject.toml
client/: package-lock.json  package.json
client/public/: index.html  manifest.json
client/src/: App.tsx
client/src/components/BarChart/: index.tsx
client/src/components/BooleanPieChart/: index.tsx
client/src/components/Card/: index.ts
client/src/components/ChangeDeltaTimeline/: index.tsx
client/src/components/Content/: index.tsx  styles.ts
client/src/components/GlobalStyle/: index.ts
client/src/components/Grid/: index.ts
client/src/components/Header/: index.tsx  styles.ts
client/src/components/Legend/: index.ts
client/src/components/Page/: index.ts
client/src/components/Title/: index.ts
client/src/helpers/: colours.ts  columns.ts  gridSizes.ts  mediaQuery.ts  numberFormatter.ts  statistics.ts  useRenderedColumnsWidth.ts
config/: flask.py
helpers/: exceptions.py  time_zones.py
migrations/versions/: 10d1615b80b7_created_timestamp.py  522c7200e254_edit_events.py
models/: edit_event.py
services/: analytics.py  wiki_listener.py
sockets/: __init__.py
